Overflow mobile fix

--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -8,6 +8,10 @@ body {
 	position: relative;
 }
 
+.overflow-x-hidden {
+	overflow-x: hidden;
+}
+
 header {
   padding: 120px 0 80px;
   position: relative;
